<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.test.quizztimetest.views.views.QuizFragment">

    <TextView
        android:id="@+id/questionTextView"
        style="@style/texti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/domanda"
        android:textSize="24sp" />


    <TextView
        android:id="@+id/tv_possibile_rsp"
        style="@style/texti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        tools:text="possibile risposta" />

    <EditText
        android:id="@+id/answerEditText"
        style="@style/texti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:height="1dp"
        android:textColorHint="@color/white"
        android:maxLength="1"
        android:textColorHighlight="@color/white"
        android:hint="@string/inserisci_un_numero_da_1_a_4"
        android:inputType="text" />

    <Button
        android:id="@+id/submitAnswerButton"
        style="@style/texti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/rispondi" />


</LinearLayout>




